k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sadp
  labels:
    name: sadp
    environment: production
